Changed List.of (Java 9) to Arrays.asList (Java 8)